# diny

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSE.md  README.md  deny.toml
.github/workflows/: audit.yml  ci.yml
diny/: Cargo.toml  crates-io.md
diny/benches/: array.rs  common.rs  rec.rs
diny/examples/: tokio.rs
diny/src/: lib.rs
diny_core/: Cargo.toml  crates-io.md
diny_core/src/: deserializer.rs  io.rs  lib.rs  macros.rs  serializer.rs
diny_core/src/backend/: decode.rs  encode.rs  format.rs  mod.rs
diny_core/src/backend/collection/: macros.rs  mod.rs  vec.rs
diny_core/src/backend/collection/macros/: map.rs  mod.rs  seq.rs
diny_core/src/backend/container/: mod.rs
diny_core/src/backend/future/: deserialize_exact.rs  mod.rs  serialize_all.rs
diny_core/src/backend/internal/: macros.rs  mod.rs
diny_core/src/backend/intrinsic/: array.rs  empty_struct.rs  mod.rs  option.rs  result.rs  string.rs
diny_core/src/backend/primitive/: macros.rs  mod.rs
diny_core/src/backend/wrapper/: arc.rs  box.rs  cell.rs  macros.rs  mod.rs  phantom_data.rs  rc.rs  ref_cell.rs
diny_core/src/buffer/: buffer_cursor.rs  buffer_encode.rs  buffer_encoder.rs  buffer_state.rs  mod.rs
diny_core/src/util/: async_slice_reader.rs  async_slice_writer.rs  mod.rs
diny_derive/: Cargo.toml  crates-io.md
diny_derive/src/: lib.rs  macros.rs
diny_derive/src/data/: errors.rs  mod.rs
diny_derive/src/serialize/: code.rs  encoded_field_gen.rs  encoded_variant_gen.rs  mod.rs
diny_test/: Cargo.toml  crates-io.md
diny_test/src/: lib.rs  macros.rs
diny_test/src/format/: bool.rs  byte_slice.rs  byte_vec.rs  char.rs  macros.rs  mod.rs  str.rs  string.rs  unit.rs
diny_test/tests/: arc.rs  array.rs  binary_heap.rs  box.rs  btree_map.rs  btree_set.rs  cell.rs  empty_enum.rs  empty_struct.rs  enum.rs  hash_map.rs  hash_set.rs  linked_list.rs  option.rs  phantom.rs  primitive.rs  rc.rs  record.rs  refcell.rs  result.rs  string.rs  vec.rs  vec_deque.rs
diny_test/tests/common/: empty_enum.rs  empty_struct.rs  mod.rs  my_enum.rs  my_rec.rs
diny_test/tests/common/method/: eq.rs  mod.rs  ord.rs  set.rs
