[package]
name = "diny"
version = "0.0.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An asynchronous, alloc-free serialization framework"
documentation = "https://docs.rs/diny/"
repository = "https://github.com/dbdeviant/diny"
keywords = ["diny", "serialization", "async"]
categories = ["encoding", "asynchronous"]
readme = "crates-io.md"

[features]
default      = ["std"]
derive       = ["diny_core/derive"]
std          = ["diny_core/std"]
alloc        = ["diny_core/alloc"]
unsafe_speed = ["diny_core/unsafe_speed"]
test         = ["diny_test"]

[dependencies]
diny_core   = { version = "0.0.3", path = "../diny_core",   default_features = false }
diny_test   = { version = "0.0.3", path = "../diny_test",   default_features = false, optional = true }

[dev-dependencies]
futures = "0.3"
futures-util = "0.3"
diny_core   = { version = "0.0.3", path = "../diny_core",   default_features = false }
diny_test   = { version = "0.0.3", path = '../diny_test',   default_features = false }
criterion = "0.3"


[package.metadata.playground]
features = ["derive", "test"]

[package.metadata.docs.rs]
features = ["derive"]
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[[bench]]
name = "rec"
harness = false

[[bench]]
name = "array"
harness = false
